--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,39 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh; /* Set the container height to 100% of the viewport height */
+}
+
+.navbar {
   padding: 2rem;
+  min-width: 25vh; /* Set width to 20% of the container */
+  max-width: 25vh;
+  background-color: #333; /* Example background color */
+  justify-content: center;
+}
+
+.title{
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.headerBtn {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  margin-bottom: 5px;
+  background-color: #555;
+  color: white;
+  border: none;
+  cursor: pointer;
   text-align: center;
 }
 
+.headerBtn:hover {
+  background-color: #777;
+}
+
+.content {
+  flex: 1; /* Take up remaining space */
+  padding: 20px; /* Add padding for spacing */
+}
